Fix dropdown search input border-radius in dropdown on iOS

--- a/css/main.css
+++ b/css/main.css
@@ -571,6 +571,7 @@
   border: 1px solid #90caf9;
   box-shadow: none;
   outline: none;
+  -webkit-appearance: none;
 }
 .dropdown__filter-input:focus::-webkit-input-placeholder {
   color: #bbdefb;
