--- a/src/components/Dropdown.less
+++ b/src/components/Dropdown.less
@@ -188,6 +188,7 @@
         border: 1px solid #90caf9;
         box-shadow: none;
         outline: none;
+        -webkit-appearance: none;
 
         &::placeholder {
           color: #bbdefb;
